syntax = "proto3";

option java_package = "sinnet.grpc.customers";
option java_outer_classname = "CustomersProto";
option java_multiple_files = true;

import "common.proto";

package customers;

service Customers {
  rpc list(ListRequest) returns (ListReply);
  rpc remove(RemoveRequest) returns (RemoveReply);
  rpc get(GetRequest) returns (GetReply);
  rpc reserve(ReserveRequest) returns (ReserveReply);
  rpc update(UpdateCommand) returns (UpdateResult);
}

message ListRequest {
  string projectId = 1;
  common.UserToken userToken = 2;
}
message ListReply {
  repeated CustomerModel customers = 1;
}

message RemoveRequest {
  common.UserToken userToken = 1;
  common.EntityId entityId = 2;
}
message RemoveReply {
  bool success = 1;
}

message GetRequest {
  common.UserToken userToken = 1;
  common.EntityId entityId = 2;
}
message GetReply {
  CustomerModel model = 1;
}

message ReserveRequest {
  string projectId = 1;
}
message ReserveReply {
  common.EntityId entityId = 1;
}

message UpdateCommand {
  common.UserToken userToken = 1;
  CustomerModel model = 2;
}
message UpdateResult {
  common.EntityId entityId = 1;
}

message CustomerModel {
  common.EntityId id = 1;
  CustomerValue value = 2;
  repeated CustomerSecret secrets = 3;
  repeated CustomerSecretEx secretEx = 4;
  repeated CustomerContact contacts = 5;
}

message CustomerValue {
  string operatorEmail = 1;
  string billingModel = 2;
  string supportStatus = 3;
  int32 distance = 4;
  string customerName = 5;
  string customerCityName = 6;
  string customerAddress = 7;
  bool nfzUmowa = 8;
  bool nfzMaFilie = 9;
  bool nfzLekarz = 10;
  bool nfzPolozna = 11;
  bool nfzPielegniarkaSrodowiskowa = 12;
  bool nfzMedycynaSzkolna = 13;
  bool nfzTransportSanitarny = 14;
  bool nfzNocnaPomocLekarska = 15;
  bool nfzAmbulatoryjnaOpiekaSpecjalistyczna = 16;
  bool nfzRehabilitacja = 17;
  bool nfzStomatologia = 18;
  bool nfzPsychiatria = 19;
  bool nfzSzpitalnictwo = 20;
  bool nfzProgramyProfilaktyczne = 21;
  bool nfzZaopatrzenieOrtopedyczne = 22;
  bool nfzOpiekaDlugoterminowa = 23;
  string nfzNotatki = 24;
  bool komercjaJest = 25;
  string komercjaNotatki = 26;
  string daneTechniczne = 27;
}

message CustomerSecret {
  string location = 1;
  string username = 2;
  string password = 3;
  string changedWho  = 4;
  LocalDateTime changedWhen = 5;
  string otpSecret = 6;
  string otpRecoveryKeys = 7;
}

message CustomerSecretEx {
  string location = 1;
  string username = 2;
  string password = 3;
  string entityName = 4;
  string entityCode = 5;
  string changedWho = 6;
  LocalDateTime changedWhen = 7;
  string otpSecret = 8;
  string otpRecoveryKeys = 9;
}

message CustomerContact {
  string firstName = 1;
  string lastName = 2;
  string phoneNo = 3;
  string email = 4;
}

message LocalDateTime {
  int32 year = 1;
  int32 month = 2;
  int32 day = 3;
  int32 hour = 4;
  int32 minute = 5;
  int32 second = 6; 
}
